# fraud-detection-engine

./: .env.example  .gitignore  Makefile  README.md  comprehensive_test.py  data_requirements.txt  deployment_report.json  docker-compose.yml  frontend_server.py  launch_complete_system.py  monitoring-services.yml  monitoring_dashboard.py  performance_optimizer.py  production_deploy.py  pyproject.toml  quick_data_gen.py  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  requirements.txt  setup.py  simple_test.py  start_mlflow.py  system_architecture.md  test_all_services.py  train_models.py
.github/workflows/: ci-cd.yml  model-training.yml  performance-monitoring.yml  security-scan.yml
config/: __init__.py  api.yaml  database.yaml  deployment.yaml  kafka.yaml  model.yaml  monitoring.yaml
data/: generate_synthetic_data.py  preprocess_data.py  validate_data.py
data/interim/: cleaned_transactions.csv  feature_engineered.csv
data/schemas/: transaction_schema.json  user_schema.json
data/training/: fraud_training_full.parquet  test_data.csv
frontend/: index.html  vercel.json
frontend/static/css/: dashboard.css
frontend/static/js/: dashboard.js
frontend/templates/: dashboard.html
infrastructure/docker/: Dockerfile  docker-compose.yml
infrastructure/helm/fraud-detection/: Chart.yaml  values.yaml
infrastructure/kubernetes/base/: api-deployment.yaml  configmap-secret.yaml  scaling.yaml  storage-rbac.yaml
infrastructure/terraform/: main.tf  variables.tf
models/: __init__.py
models/database/: __init__.py  alert.py  audit_log.py  blacklist.py  merchant.py  model_metadata.py  transaction.py  user.py
models/enums/: __init__.py  common.py
models/mixins/: __init__.py  base.py
models/ml_models/: __init__.py
models/production/: encoders.pkl  feature_info.json  logistic_regression_model.pkl  logistic_regression_scaler.pkl  model_comparison.json  random_forest_model.pkl
models/schemas/: __init__.py
monitoring/: docker-compose.monitoring.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: fraud_detection_dashboard.json  fraud_detection_overview.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml  fraud_detection.yml
monitoring/prometheus/: fraud_detection_rules.yml  prometheus.yml
monitoring/prometheus/rules/: fraud_detection_alerts.yml  performance_alerts.yml
monitoring/scripts/: setup_monitoring.sh
notebooks/: README.md  requirements.txt
notebooks/01_data_exploration/: 01_dataset_overview.ipynb
notebooks/02_feature_engineering/: 01_basic_features.ipynb
notebooks/03_model_development/: 01_baseline_models.ipynb
notebooks/utils/: data_utils.py  feature_utils.py  model_utils.py  viz_utils.py
scripts/: setup.py
scripts/data_processing/: process_transactions.py
scripts/database/: init_database.py
scripts/model_training/: train_model.py
src/: __init__.py  main.py
src/api/: __init__.py
src/api/middleware/: __init__.py  logging_middleware.py  rate_limit_middleware.py  security_middleware.py
src/api/routes/: admin.py  alerts.py  analytics.py  auth.py  fraud.py  models.py  transactions.py
src/core/: __init__.py  config.py  database.py  exceptions.py
src/ml/: __init__.py
src/models/: __init__.py
src/monitoring/: __init__.py
src/schemas/: fraud.py
src/services/: model_service.py  websocket_service.py
src/streaming/: __init__.py
src/utils/: __init__.py  auth.py  logger.py  monitoring.py  rate_limit.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_api_integration.py
tests/performance/: test_model_performance.py
tests/unit/: test_basic_fraud_detection.py  test_data_processing.py  test_fraud_detection.py
